--- a/app/src/main/res/layout/business_details.xml
+++ b/app/src/main/res/layout/business_details.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/business_details_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,6 +15,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:transitionName="@string/business_name_transition_name"
+        android:maxLines="2"
+        android:lines="2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView2"
