--- a/app/src/main/res/layout/start_layout.xml
+++ b/app/src/main/res/layout/start_layout.xml
@@ -28,8 +28,15 @@
                     android:background="?attr/colorPrimary"
                     android:minHeight="?attr/actionBarSize"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    app:theme="@style/AppTheme.Toolbar"
-                    app:titleTextAppearance="@style/AppTheme.Toolbar.Title"/>
+                    app:theme="@style/AppTheme.Toolbar">
+
+                    <TextView
+                        android:id="@+id/toolbar_title"
+                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"/>
+                </android.support.v7.widget.Toolbar>
 
             </android.support.design.widget.AppBarLayout>
 
