--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <color name="gray">#555</color>
     <color name="grey_600">#757575</color>
     <color name="grey_300">#E0E0E0</color>
+    <color name="blue_200">#81D4FA</color>
     <color name="blue_100">#B3E5FC</color>
+    <color name="blue_50">#E1F5FE</color>
     <color name="translucent_30">#4C000000</color> <!--4C for %30 opacity-->
 </resources>
