--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorPrimary">@color/textColorPrimary</item>
-        <item name="android:buttonStyle">@style/AccentButton</item>
+        <item name="buttonStyle">@style/AppTheme.AccentButton</item>
         <item name="android:windowAllowEnterTransitionOverlap">false</item>
         <item name="android:windowAllowReturnTransitionOverlap">false</item>
     </style>
@@ -37,14 +37,21 @@
         <item name="android:typeface">sans</item>
     </style>
 
-    <style name="BlueButton" parent="ThemeOverlay.AppCompat.Dark">
-        <item name="colorButtonNormal">@drawable/btn_background</item>
-        <item name="android:textColor">@color/white</item>
+    <style name="BlueButton" parent="Widget.AppCompat.Button">
+        <!--<item name="colorButtonNormal">@drawable/btn_background</item>-->
+        <item name="colorButtonNormal">@color/colorPrimary</item>
+        <item name="android:textColor">@color/textDarkPrimary</item>
     </style>
 
-    <style name="AccentButton" parent="Widget.AppCompat.Button.Colored">
-        <item name="colorButtonNormal">@color/colorAccent</item>
+    <style name="AppTheme.AccentButton" parent="Widget.AppCompat.Button.Colored">
+        <!--<item name="colorButtonNormal">@android:color/holo_blue_light</item>-->
+        <!--<item name="android:colorButtonNormal">@android:color/darker_gray</item>-->
         <!--<item name="android:textColor">@color/white</item>-->
+    </style>
+
+    <style name="AppTheme.ActionButton" parent="Base.Widget.AppCompat.Button.Colored">
+        <item name="background">@color/colorPrimary</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="Headline" parent="TextAppearance.AppCompat.Headline">
