--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,16 +37,12 @@
         <item name="android:typeface">sans</item>
     </style>
 
-    <style name="BlueButton" parent="Widget.AppCompat.Button">
-        <!--<item name="colorButtonNormal">@drawable/btn_background</item>-->
+    <style name="BlueButton" parent="Widget.AppCompat.Button.Colored">
         <item name="colorButtonNormal">@color/colorPrimary</item>
         <item name="android:textColor">@color/textDarkPrimary</item>
     </style>
 
     <style name="AppTheme.AccentButton" parent="Widget.AppCompat.Button.Colored">
-        <!--<item name="colorButtonNormal">@android:color/holo_blue_light</item>-->
-        <!--<item name="android:colorButtonNormal">@android:color/darker_gray</item>-->
-        <!--<item name="android:textColor">@color/white</item>-->
     </style>
 
     <style name="AppTheme.ActionButton" parent="Base.Widget.AppCompat.Button.Colored">
